# YouRAM

./: .gitignore  Cargo.toml  README.md
codegen/: Cargo.toml
codegen/src/: attr.rs  lib.rs
config/: nangate45_4_4.json  nangate45_4_8.json
document/: sram.drawio  technology_design.md
examples/: create_circuit.rs  spice_test.rs
src/: error.rs  lib.rs  main.rs
src/charz/: error.rs  mod.rs  transaction.rs
src/charz/function/: marchc.rs  marchcminus.rs  marchx.rs  mats.rs  mod.rs  random.rs
src/charz/timing/: mod.rs
src/circuit/: error.rs  factory.rs  mod.rs  module.rs  shared.rs  srdstring.rs
src/circuit/base/: instance.rs  mod.rs  net.rs  pin.rs  port.rs
src/circuit/module/: andarray.rs  bank.rs  bitcellarray.rs  bitcellarrayrec.rs  buffer.rs  columnmux.rs  columnmuxarray.rs  controllogic.rs  core.rs  coreselect.rs  datapath.rs  decoder.rs  fanoutbuffer.rs  inputdffs.rs  mod.rs  prechargearray.rs  replicalbitcellarray.rs  senseamparray.rs  sram.rs  wordlinederiver.rs  wordlinederiverarr.rs  writedriverarray.rs
src/circuit/primitive/: leafcell.rs  mod.rs  stdcell.rs
src/export/: liberty.rs  mod.rs  spice.rs  template.v  verilog.rs
src/pdk/: cell.rs  cells.rs  config.rs  error.rs  information.rs  mod.rs  types.rs
src/simulate/: error.rs  mod.rs  simulator.rs
src/simulate/execute/: mod.rs  ngspice.rs  spectre.rs
src/simulate/meas/: delay.rs  mod.rs  voltageat.rs
src/simulate/write/: mod.rs
tests/: andarray.rs  decoder.rs  sram.rs  sram_liberty.rs  sram_timing.rs
