[package]
name = "youram"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
derive-new = "0.7.0"
derive_builder = "0.20.2"
reda-lib = "0.4.0"
reda-sp = "0.2.0"
reda-unit = "0.3.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

youram-macro = { path = "./codegen" }
